--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,7 +72,48 @@
 
     </div>
   </article>
-
+  <article class="row">
+    <ngx-datatable
+      class="material col-md-12"
+      [rows]="rows"
+      [loadingIndicator]="loadingIndicator"
+      [columns]="columns"
+      [columnMode]="'force'"
+      [headerHeight]="50"
+      [footerHeight]="50"
+      [rowHeight]="'auto'"
+      [reorderable]="reorderable">
+      <ngx-datatable-column name="Name">
+        <ng-template let-column="column" ngx-datatable-header-template>
+          {{column.name}}
+        </ng-template>
+        <ng-template let-value="value" ngx-datatable-cell-template>
+          <strong>{{value}}</strong>
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="Description">
+        <ng-template let-column="column" let-sort="sortFn" ngx-datatable-header-template>
+          <span (click)="sort()">{{column.name}}</span>
+        </ng-template>
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          <i>{{value}}</i>
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="Price">
+        <ng-template let-value="value" ngx-datatable-cell-template>
+          <div style="border:solid 1px #ddd;margin:5px;padding:3px">
+            ${{value}}
+            <div style="background:#999;height:10px" [style.width]="value + '%'"></div>
+          </div>
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column>
+        <ng-template let-value="value" let-row="row" ngx-datatable-cell-template>
+          <img [src]="row.url">
+        </ng-template>
+      </ngx-datatable-column>
+    </ngx-datatable>
+  </article>
 </section>
 
 
