--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -3,3 +3,6 @@
 
 @import 'variables';
 @import 'bootstrap/scss/bootstrap.scss';
+@import '~@swimlane/ngx-datatable/release/index.css';
+@import '~@swimlane/ngx-datatable/release/themes/material.css';
+@import '~@swimlane/ngx-datatable/release/assets/icons.css';
